# FinQuant

./: .gitignore  CONTRIBUTING.md  README.md  README.tex.md  pyproject.toml  requirements.txt  version
.github/workflows/: pytest.yml
docs/: examples.rst  index.rst  quickstart.rst
example/: Example-Analysis.py  Example-Build-Portfolio-from-web.py
finquant/: data_types.py  efficient_frontier.py  exceptions.py  market.py  minimise_fun.py  monte_carlo.py  moving_average.py  portfolio.py  quants.py  returns.py
tests/: Makefile  test_market.py  test_portfolio.py  test_stock.py
